--- a/view/brick.yaml
+++ b/view/brick.yaml
@@ -7,9 +7,9 @@ vars:
   projectKey:
     type: string
     description: The project key (e.g. Turbo -> TurboScaffold).
-  featureName:
-    type: string
-    description: The name of the feature (e.g. auth).
   viewName:
     type: string
     description: The name of the view (e.g. Turbo -> TurboView).
+  packageName:
+    type: string
+    description: The package name (e.g. ultra_wide_turbo_bricks -> import 'package:ultra_wide_turbo_bricks..)
